--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,316 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+:root{
+    --black: #2b2b2b;
+    --white: #FFFFFF;
+    --purple: #A683F1;
+    --red: #FE8282;
+    --blue: #518cff;
+    --main-gradient: linear-gradient(90deg, var(--blue) 0%, var(--purple) 100%);
+    --hover-gradient: linear-gradient(90deg, var(--blue) 0%, var(--purple) 51%, var(--red) 100%);
+    --main-gradient-scroll: linear-gradient(var(--blue) 0%, var(--purple) 100%);
+    --heading-main: 56px;
+    --heading-secondary: 36px;
+    --heading-tertiary: 24px;
+    --body-text-default: 18px;
+    --body-text-small: 16px;
+    --light-shadow: 4px 12px 24px rgba(81, 140, 255, 0.1), 0px 0px 8px rgba(81, 140, 255, 0.08);
+    --top-shadow: 6px -16px 32px rgba(81, 140, 255, 0.1), 0px 0px 8px rgba(81, 140, 255, 0.08);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+html.dark{
+  --white: #1b1b1b;
+  --black: #f5f5f5;
+  --blue: #6391ef;
+  --purple: #b495f7;
+  --light-shadow: 4px 12px 24px rgba(114, 159, 255, 0.1), 0px 0px 8px rgba(114, 159, 255, 0.08);
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+html{
+    transition: 0.3s all ease-in-out;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+*{
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-body {
-  color: rbg(--foreground-rgb);
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+body{
+    font-family: 'Inter', sans-serif;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: var(--white);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+img{
+    pointer-events: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+a{
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-drag: none;
+}
+
+h1,h2,h3,h4,h5,h6{
+    font-weight: bold;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #2b2b2b;
+}
+  
+::-webkit-scrollbar-thumb {
+    background: var(--main-gradient-scroll);
+    border-radius: 5px;
+}
+
+.hr{
+    width: 160px;
+    height: 4px;
+    border-radius: 2px;
+    background: var(--main-gradient);
+    margin-bottom: 0.5rem;
+}
+
+.btn{
+    padding: 0.5rem 1.25rem;
+    text-align: center;
+}
+
+.btn-primary.disabled{
+    pointer-events: none;
+    background: #E5E5E5 !important;
+    color: rgba(43, 43, 43, 0.7);
+    opacity: 0.8;
+}
+
+.btn-primary{
+    position: relative;
+    color: white;
+    background: var(--hover-gradient);
+    background-size: 200% auto;
+    background-position: 0%;
+    padding: 0.75rem 2rem;
+    border-radius: 40px;
+    font-size: var(--body-text-default);
+    font-weight: 600;
+    transition: 0.35s background-position ease-in-out;
+}
+
+.btn-primary:hover{
+    background-position: 100%;
+}
+
+.btn-primary:not(.disabled)::before{
+    z-index: -1;
+    content: "";
+    position: absolute;
+    left: 30px;
+    bottom: -20px;
+    width: 70%;
+    height: 40px;
+    background: var(--hover-gradient);
+    background-size: 200% auto;
+    background-position: 0%;
+    filter: blur(32px);
+    opacity: 0.7;
+    transition: 0.35s background-position ease-in-out;
+}
+
+.btn-primary:hover::before{
+    background-position: 100%;
+}
+
+.btn-secondary{
+    font-size: var(--body-text-default);
+    font-weight: 600;
+    position: relative;
+    color: var(--blue);
+    overflow: hidden;
+    transition: 0.35s color ease-in-out;
+}
+
+.btn-secondary::after{
+    content: "";
+    width: 0%;
+    height: 100%;
+    background: var(--main-gradient);
+    position: absolute;
+    top: 0;
+    left: -20px;
+    transform: skewX(30deg);
+    transition: 0.35s width ease-in-out;
+    z-index: -1;
+}
+
+.btn-secondary:hover{
+    color: white;
+}
+
+.btn-secondary:hover::after{
+    width: 130%;
+}
+
+.btn-secondary::before,
+.gradient-border::before{
+    content: "";
+    inset: 0;
+    position: absolute;
+    border: 2px solid transparent;
+    background: var(--main-gradient) border-box;
+    mask:
+        linear-gradient(#fff 0 0) padding-box, 
+        linear-gradient(#fff 0 0);
+    -webkit-mask:
+        linear-gradient(#fff 0 0) padding-box, 
+        linear-gradient(#fff 0 0);
+    mask-composite: exclude;
+    -webkit-mask-composite: xor;
+}
+
+.btn-secondary,
+.btn-secondary::before{
+    border-radius: 999px;
+}
+
+.in-top .shot-overlay{
+    animation: top 0.3s ease-in-out 1 forwards;
+}
+
+.in-right .shot-overlay{
+    animation: right 0.5s ease-in-out 1 forwards;
+}
+
+.in-bottom .shot-overlay{
+    animation: bottom 0.5s ease-in-out 1 forwards;
+}
+
+.in-left .shot-overlay{
+    animation: left 0.5s ease-in-out 1 forwards;
+}
+
+.out-top .shot-overlay{
+    animation: top 0.5s ease-in-out 1 reverse forwards;
+}
+
+.out-right .shot-overlay{
+    animation: right 0.5s ease-in-out 1 reverse forwards;
+}
+
+.out-bottom .shot-overlay{
+    animation: bottom 0.5s ease-in-out 1 reverse forwards;
+}
+
+.out-left .shot-overlay{
+    animation: left 0.5s ease-in-out 1 reverse forwards;
+}
+
+@keyframes top{
+    0%{
+        transform: translate(0,-100%);
+    }
+    100%{
+        transform: translate(0,0);
+    }
+}
+@keyframes right{
+    0%{
+        transform: translate(100%,0);
+    }
+    100%{
+        transform: translate(0,0);
+    }
+}
+@keyframes bottom{
+    0%{
+        transform: translate(0,100%);
+    }
+    100%{
+        transform: translate(0,0);
+    }
+}
+@keyframes left{
+    0%{
+        transform: translate(-100%,0);
+    }
+    100%{
+        transform: translate(0,0);
+    }
+}
+
+.shot-overlay{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translate(-100%,-100%);
+}
+
+.shot-overlay > h3{
+    width: 100%;
+    padding: 0rem 1rem;
+    font-size: var(--body-text-default);
+    color: var(--white);
+}
+
+.invert{
+    filter: invert(1);
+}
+
+@media only screen and (max-width: 1280px) {
+    :root{
+        --heading-main: 48px;
+        --heading-secondary: 32px;
+        --heading-tertiary: 24px;
+        --body-text-default: 18px;
+        --body-text-small: 16px;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    :root{
+        --heading-main: 40px;
+        --heading-secondary: 28px;
+        --heading-tertiary: 20px;
+        --body-text-default: 16px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    :root{
+        --heading-main: 28px;
+        --heading-secondary: 24px;
+        --heading-tertiary: 20px;
+        --body-text-small: 14.4px;
+    }
+}
+
+@media only screen and (max-width: 360px){
+    :root{
+        --heading-main: 24px;
+        --body-text-small: 14.4px;
+    }
 }
