--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,7 @@
     overflow-x: hidden;
     .glide{
         width: 100%;
+        height: calc(clamp(312px,40vw,480px)*0.625);
         position: static;
         width: clamp(312px,40vw,480px);
         aspect-ratio: 16 / 10;
@@ -65,11 +66,6 @@
                         .overlay{
                             bottom: 0;
                         }
-                    }
-                    img{
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
                     }
                 }
             }
