--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,6 +28,7 @@ html.dark{
   --blue: #6391ef;
   --purple: #b495f7;
   --light-shadow: 4px 12px 24px rgba(114, 159, 255, 0.1), 0px 0px 8px rgba(114, 159, 255, 0.08);
+  --top-shadow: 6px -16px 32px rgba(114, 159, 255, 0.1), 0px 0px 8px rgba(114, 159, 255, 0.08);
 }
 
 html{
