--- a/styles/GithubSection.module.css
+++ b/styles/GithubSection.module.css
@@ -1,7 +1,7 @@
 .container{
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     gap: 1rem;
 }
@@ -12,7 +12,6 @@
 }
 
 .github-projects{
-    display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 2rem;
