--- a/styles/main.scss
+++ b/styles/main.scss
@@ -92,16 +92,16 @@
   
     &__tab-list { 
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         gap: 0.75rem;
         margin-bottom: 2rem;
-        padding: 0;
     }
   
     &__tab {
         border: 1px solid transparent;
         list-style: none;
-        padding: 8px 20px;
+        padding: 0.5rem 1.25rem;
         border-radius: 99px;
         font-weight: 600;
         color: var(--blue);
