--- a/styles/HeroSection.module.css
+++ b/styles/HeroSection.module.css
@@ -58,7 +58,7 @@
     justify-content: center;
 }
 
-.arrow-btn > div{
+.arrow-btn > button{
     padding: 0.75rem;
     background: var(--white);
     box-shadow: var(--light-shadow);
@@ -69,7 +69,7 @@
     transition: 0.35s background ease-in-out;
 }
 
-.arrow-btn > div:hover{
+.arrow-btn > button:hover{
     background: var(--blue);
 }
 
@@ -161,7 +161,7 @@
         top: 75%;
         right: 50%;
         transform: translateX(50%);
-        gap: 2rem;
+        gap: 1.5rem;
         z-index: 2;
     }
 
